Feat: Fix critical issues including JVM launch, dependency updates, F-Droid preparation, and add ErgoAuth address generation feature